# game-a-week

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
devlog/: week1.md
include/: README.txt
include/EGL/: EGL_3d.h  EGL_math.h  EGL_random.h  EGL_strings.h  EGL_testing.h  README.md
lib/: README.txt
shader/src/: triangle_frag.glsl  triangle_vert.glsl
src/: gaw_wheel.c
src/EGL/: EGL_strings.c  EGL_testing.c  EGL_xoshiro128plus.c  EGL_xoshiro128plus_test.c
src/week1/: game.c  world.h
